# CMakeTask

./: CMakeLists.txt  README.md  run.sh
A/: CMakeLists.txt  preparing.py
B/: CMakeLists.txt  lib.cpp  lib.h
C/: main.cpp  main.h
